--- a/My Blog Website/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/My Blog Website/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -183,8 +183,14 @@
         <a class="nav-link" href="#" role="button"><i class="fas fa-key"></i></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#" role="button" onmouseover="this.style.color='red'" onmouseout="this.style.color='rgba(255, 255, 255, .75)'"><i class="fas fa-power-off"></i></a>
-      </li>
+            <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="/login" method="post">
+                <button type="submit" class="nav-link btn btn-link" 
+                        onmouseover="this.style.color='red'" 
+                        onmouseout="this.style.color='rgba(255, 255, 255, .75)'">
+                    <i class="fas fa-power-off"></i>
+                </button>
+            </form>
+        </li>
     </ul>
   </nav>
   <!-- /.navbar -->
