--- a/My Blog Website/Areas/Admin/Views/_ViewImports.cshtml
+++ b/My Blog Website/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using My_Blog_Website
 @using My_Blog_Website.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@attribute [Microsoft.AspNetCore.Authorization.Authorize]
