--- a/My Blog Website/Areas/Identity/Pages/Account/Login.cshtml
+++ b/My Blog Website/Areas/Identity/Pages/Account/Login.cshtml
@@ -25,9 +25,9 @@
                                 <p>Please login to your account</p>
                                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                 <div class="form-floating mb-4">
-                                    <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
-                                    <label asp-for="Input.Email" class="form-label"></label>
-                                    <span asp-validation-for="Input.Email" class="text-danger"></span>
+                                    <input asp-for="Input.UsernameOrEmail" class="form-control" autocomplete="username" aria-required="true" />
+                                    <label asp-for="Input.UsernameOrEmail" class="form-label"></label>
+                                    <span asp-validation-for="Input.UsernameOrEmail" class="text-danger"></span>
                                 </div>
                                 <div class="form-floating mb-4">
                                     <input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" />
