--- a/My Blog Website/Areas/Admin/Views/Posts/Create.cshtml
+++ b/My Blog Website/Areas/Admin/Views/Posts/Create.cshtml
@@ -26,6 +26,7 @@
         <input type="hidden" asp-for="Categories" id="selectedCategories" />
         <input type="hidden" asp-for="Tags" id="selectedTags" />
         <input type="hidden" asp-for="FeatureImageUrl" id="featuredImageData" />
+        <input type="hidden" asp-for="AuthorId" />
 
         <div class="col-lg-12 page-main">
             <!--Main Content-->
@@ -108,6 +109,12 @@
                     <label class="date">Date</label>
                     <div id="dateContainer" class="date-input-container">
                         <input type="date" id="dateInput" asp-for="PublishedDate" />
+                    </div>
+
+                    <div class="form-group">
+                        <label class="control-label">Author</label>
+                        <input type="text" class="form-control" 
+                               value="@User.Identity.Name" readonly>
                     </div>
                 </div>
             </div>
