added author while creating post, change design

--- a/My Blog Website/Areas/Admin/Views/Posts/Create.cshtml
+++ b/My Blog Website/Areas/Admin/Views/Posts/Create.cshtml
@@ -113,8 +113,7 @@
 
                     <div class="form-group">
                         <label class="control-label">Author</label>
-                        <input type="text" class="form-control" 
-                               value="@User.Identity.Name" readonly>
+                        <input type="text" id="authorPost" class="form-control" value="@User.Identity.Name" readonly>
                     </div>
                 </div>
             </div>
